# libpaper

./: LICENSE  README.md  main.py  pyproject.toml
.cursor/rules/: code.mdc  limit.mdc  lint.mdc  python.mdc  read.mdc
docs/: mkdocs.yml
docs/docs/: architecture  devplan.md  index.md
docs/docs/api/: cli.md  index.md  models.md  services.md  storage.md
src/libpaper/: __init__.py
src/libpaper/api/: __init__.py  dependencies.py  main.py  schemas.py
src/libpaper/api/routers/: __init__.py  collections.py  papers.py  tags.py
src/libpaper/cli/: main.py  utils.py
src/libpaper/cli/commands/: collection.py  paper.py  stats.py  tag.py
src/libpaper/extractors/: pdf_extractor.py
src/libpaper/models/: __init__.py  collection.py  paper.py  tag.py
src/libpaper/services/: __init__.py  collection_service.py  paper_service.py  tag_service.py
src/libpaper/storage/: __init__.py  config.py  database.py  file_manager.py
tests/: conftest.py  test_database.py  test_models.py
